# LiteLauncher

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  pubspec.yaml
.omo/run-continuation/: ses_09a962aa6ffebs4eaMWerP5JnT.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/litelauncher/app/: LiteLauncherApp.kt
android/app/src/main/java/com/litelauncher/app/bridge/: LauncherApi.kt  LauncherHostApiImpl.kt
android/app/src/main/java/com/litelauncher/app/managers/: AccountManager.kt  AssetManager.kt  DeviceProfiler.kt  DownloadManager.kt  GameLauncher.kt  JREManager.kt  LibraryManager.kt  ModLoaderInstaller.kt  ModManager.kt  VersionManager.kt
android/app/src/main/kotlin/com/litelauncher/litelauncher/: MainActivity.kt
android/mc_runtime/: build.gradle.kts
android/mc_runtime/src/main/: AndroidManifest.xml
android/mc_runtime/src/main/aidl/com/litelauncher/runtime/: IMCRuntimeService.aidl
android/mc_runtime/src/main/java/com/litelauncher/runtime/: MCRuntimeService.kt
android/native/: CMakeLists.txt
android/native/engine/: engine.c  engine.h  jvm_bootstrap.c  jvm_bootstrap.h
android/native/engine/jpms-shim/src/main/java/java/lang/: Module.java
android/native/engine/jpms-shim/src/main/java/java/lang/module/: Configuration.java  ModuleDescriptor.java  ModuleFinder.java  ModuleLayer.java  ResolvedModule.java
android/native/input/: ring_buffer.c  ring_buffer.h
android/native/ipc/: ipc_protocol.c  ipc_protocol.h
android/native/render/: renderer_dispatch.c  renderer_dispatch.h  surface_bridge.c  surface_bridge.h
integration_test/: launch_test.dart
ksu_module/: customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh
ksu_module/initrc/: litelauncher.rc
ksu_module/webroot/: index.html
lib/: app.dart  main.dart
lib/core/theme/: colors.dart  theme.dart
lib/screens/: main_shell.dart
lib/screens/crash_report/: crash_screen.dart
lib/screens/game/: game_screen.dart
lib/screens/home/: home_screen.dart  launcher_home_screen.dart
lib/screens/mod/: mod_list_screen.dart
lib/screens/versions/: download_screen.dart  version_list_screen.dart
lib/services/: launcher_api.dart  launcher_api.g.dart  launcher_service.dart
lib/widgets/: glass_panel.dart
lwjgl2/: BUILD.md
test/unit/: main_shell_test.dart
